--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,18 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>crud</name>
 	<description></description>
-
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>net.bull.javamelody</groupId>
+			<artifactId>javamelody-spring-boot-starter</artifactId>
+			<version>1.76.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
